--- a/index.html
+++ b/index.html
@@ -61,15 +61,41 @@
           <p>AAAAAAAAAAAA</p>
         </div>
         <div class="news">
-          <div id="new">
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
-            <p>AAAAAAAAAAAA</p>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
+          </div>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
+          </div>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
+          </div>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
+          </div>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
+          </div>
+          <div class="new">
+            <img id="miniature" src="./images/logo.png" />
+            <div id="description">
+              <p>AAAAAAAAAAAA</p>
+            </div>
           </div>
         </div>
       </div>
