--- a/index3.html
+++ b/index3.html
@@ -70,15 +70,42 @@
             Quisque bibendum eu risus in tempor. Morbi sollicitudin, purus ut tristique dapibus, sapien est mattis velit, vel tristique ex justo sed sapien. Suspendisse arcu augue, elementum ut eros quis, facilisis ornare ligula. Vivamus cursus, enim non gravida fermentum, turpis libero viverra nisl, at egestas leo ipsum a velit. Proin malesuada tortor id efficitur tristique. Mauris massa massa, imperdiet suscipit ultricies sit amet, mattis vel ex. Donec vel semper elit, ut condimentum massa. Curabitur faucibus suscipit tortor, a tincidunt felis ultricies a. Ut varius tempor dolor sed imperdiet. Aliquam venenatis ultrices leo nec ornare. Aenean congue ac diam ac tempus. Curabitur aliquet, ligula id aliquet cursus, est tortor tempor libero, vitae elementum velit odio vitae orci. Pellentesque porttitor bibendum lacus, a varius urna suscipit eget. Vestibulum et massa justo. Nunc at enim dolor. </p>
       </div>
       <div class="news">
-        <div id="new">
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
-          <p>AAAAAAAAAAAA</p>
+        
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
+        </div>
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
+        </div>
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
+        </div>
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
+        </div>
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
+        </div>
+        <div class="new">
+          <img id="miniature" src="./images/logo.png" />
+          <div id="description">
+            <p>AAAAAAAAAAAA</p>
+          </div>
         </div>
       </div>
     </div>
