--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -27,7 +27,7 @@
             <div class="dropdown-content">
               <a href="./horarios.html">Horarios</a>
               <a href="../localizacion/localizacion.html">Localización</a>
-              <a href="../entradas/inscripcion.html'">Entradas</a>
+              <a href="../entradas/inscripcion.html">Entradas</a>
             </div>
           </div>
           <div class="dropdown">
