--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
     </main>
     <footer>
       <div class="footer">
-        <div>
+        <div id="contactos">
+          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente">Contactar por correo</a>
           <p>Manguca &#169; todos los derechos reservados</p>
         </div>
       </div>
