--- a/informacion/informacion.html
+++ b/informacion/informacion.html
@@ -9,8 +9,9 @@
      rel="stylesheet"
    />
    <!-- CSS Main Layout-->
+   <link rel="stylesheet" href="../css/invitados.css" />
    <link rel="stylesheet" href="../css/layout.css" />
-    <title>MANGUCA</title>
+   <title>MANGUCA</title>
   </head>
   <body>
     <header>
@@ -25,9 +26,9 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="../horarios/horarios.html">Horarios</a>
-              <a href="../localizacion/localizacion.html">Localización</a>
-              <a href="../entradas/inscripcion.html">Entradas</a>
+              <a href="./informacion/invitados.html">Invitados</a>
+              <a href="./informacion/actividades.html">Actividades</a>
+              <a href="./informacion/concursos.html">Concursos</a>
             </div>
           </div>
           <div class="dropdown">
