--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header>
       <div class="header" id="header">
         <div class="logo">
-          <a href="index.html"><img src="./images/plantilla/logo.png" alt="logo"/></a>
+          <a href="index.html"
+            ><img src="./images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="dropdown">
@@ -227,9 +229,11 @@
     </main>
     <footer>
       <div class="footer">
-        <div id="contactos">
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente">Contactar por correo</a>
-          <p>Manguca &#169; todos los derechos reservados</p>
+        <div class="contactos">
+          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+            >Contactar por correo</a
+          >
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
