--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -81,6 +81,14 @@
           </select>
         </div>
         <div class="col">
+          <label for="dateI">Date</label>
+          <input type="date"/>
+        </div>
+        <div class="col">
+          <label for="dateX">Date</label>
+          <input type="date"/>
+        </div>
+        <div class="col">
           <input type="submit" value="Enviar" id="submit" />
         </div>
        </form>
