--- a/index.html
+++ b/index.html
@@ -229,10 +229,18 @@
     </main>
     <footer>
       <div class="footer">
+        <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+          >Contactar por correo</a
+        >
         <div class="contactos">
-          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-            >Contactar por correo</a
-          >
+          <div class="rrss">
+            <img id="iconos" src="images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="images/iconos/twitter.png" alt="Twitter" />
+          </div>
+          <div class="rsss">
+            <img id="iconos" src="images/iconos/facebook.png" alt="Facebook" />
+            <img id="iconos" src="images/iconos/insta.png" alt="Instagram" />
+          </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
