--- a/index.html
+++ b/index.html
@@ -232,16 +232,22 @@
         <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
           >Contactar por correo</a
         >
+       <div class="contacto">
         <div class="contactos">
           <div class="rrss">
             <img id="iconos" src="images/iconos/rss.png" alt="RSS" />
             <img id="iconos" src="images/iconos/twitter.png" alt="Twitter" />
           </div>
-          <div class="rsss">
+        </div>
+        <div class="contactos">
+          <div class="rrss">
             <img id="iconos" src="images/iconos/facebook.png" alt="Facebook" />
             <img id="iconos" src="images/iconos/insta.png" alt="Instagram" />
           </div>
-          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+        </div>
+        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
+      </div>
+          
         </div>
       </div>
     </footer>
