--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -62,6 +62,12 @@
     </header>
     <main>
         <div class="main">
+          <div class="titleBox">
+            <div id="title">
+            <span>Invitados</span>
+          </div>
+          </div>
+          
             <div class="artists">
                 <! Columna 1 -->
            <div>
