--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- Font Roboto -->
-      <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
-    <!-- CSS Main Layout-->
-    <link rel="stylesheet" href="../css/layout.css" />
-    <title>MANGUCA</title>
+     <!-- Font Roboto -->
+     <link
+     href="https://fonts.googleapis.com/css?family=Roboto"
+     rel="stylesheet"
+   />
+   <!-- CSS Main Layout-->
+   <link rel="stylesheet" href="../css/invitados.css" />
+   <link rel="stylesheet" href="../css/layout.css" />
+   <title>MANGUCA</title>
   </head>
   <body>
     <header>
@@ -25,9 +26,9 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="../informacion/invitados.html">Invitados</a>
-              <a href="../informacion/actividades.html">Actividades</a>
-              <a href="../informacion/concursos.html">Concursos</a>
+              <a href="invitados.html">Invitados</a>
+              <a href="actividades.html">Actividades</a>
+              <a href="concursos.html">Concursos</a>
             </div>
           </div>
           <div class="dropdown">
@@ -41,7 +42,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./localizacion.html'"
+              onclick="location.href='../localizacion/localizacion.html'"
             >
               Localización
             </button>
@@ -59,7 +60,7 @@
     </div>
     </header>
     <main>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.0696295591271!2d-6.2110758981924015!3d36.52875769009336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0dcddc00bacbcb%3A0x2c9500fa5e5dfdb6!2sComplejo%20Deportivo!5e1!3m2!1ses!2ses!4v1583777800908!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <p>AAAAAAAAA</p>
     </main>
     <footer>
       <div class="footer">
