--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -25,9 +25,9 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="./horarios.html">Horarios</a>
-              <a href="../localizacion/localizacion.html">Localización</a>
-              <a href="../entradas/inscripcion.html">Entradas</a>
+              <a href="../informacion/invitados.html">Invitados</a>
+              <a href="../informacion/actividades.html">Actividades</a>
+              <a href="../informacion/concursos.html">Concursos</a>
             </div>
           </div>
           <div class="dropdown">
