--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -59,6 +59,12 @@
         </div>
       </div>
     </div>
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="inscripcion.html">Entradas</a></li>
+      </ul>
+    </div>
     </header>
     <main>
       <div class="main">
