--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -9,7 +9,7 @@
      rel="stylesheet"
    />
    <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../css/invitados.css" />
+   <link rel="stylesheet" href="../css/actividades.css" />
    <link rel="stylesheet" href="../css/layout.css" />
    <title>MANGUCA</title>
   </head>
@@ -60,8 +60,30 @@
     </div>
     </header>
     <main>
-      <p>AAAAAAAAA</p>
-    </main>
+      <div class="main">
+        <div class="titleBox">
+          <div id="title">
+          <span>Actividades</span>
+          </div>
+        </div>
+        <div class="activity">
+          <img id="miniature" src="../images/artistas/artist1.jpg" />
+          <div class = "text">
+            <div id="rol">
+              <p>Música</p>
+            </div>
+            <div id="titles">
+            FAKI
+            </div>
+            <div id="description">
+                <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
+            </div>
+          </div>
+          
+      </div>
+         
+      </div>
+  </main>
     <footer>
       <div class="footer">
         <p>Manguca &#169; todos los derechos reservados</p>
