--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -27,9 +27,9 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="./informacion/invitados.html">Invitados</a>
-                <a href="./informacion/actividades.html">Actividades</a>
-                <a href="./informacion/concursos.html">Concursos</a>
+                <a href="invitados.html">Invitados</a>
+                <a href="actividades.html">Actividades</a>
+                <a href="concursos.html">Concursos</a>
               </div>
           </div>
           <div class="dropdown">
