--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             massa justo. Nunc at enim dolor.
           </p>
         </div>
-        <div class="news">
+        <aside class="news">
           <div class="new">
             <img id="miniature" src="./images/artistas/artist1.jpg" />
             <div id="description">
@@ -225,7 +225,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </aside>
     </main>
     <footer>
       <div class="footer">
