--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -9,7 +9,6 @@
      rel="stylesheet"
    />
    <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../css/invitados.css" />
    <link rel="stylesheet" href="../css/layout.css" />
    <title>MANGUCA</title>
   </head>
@@ -58,9 +57,17 @@
         </div>
       </div>
     </div>
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="actividades.html">Actividades</a></li>
+      </ul>
+    </div>
     </header>
     <main>
-      <p>AAAAAAAAA</p>
+      <div>
+        <p>AAAA</p>
+      </div>
     </main>
     <footer>
       <div class="footer">
