--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -9,7 +9,6 @@
      rel="stylesheet"
    />
    <!-- CSS Main Layout-->
-   <link rel="stylesheet" href="../css/invitados.css" />
    <link rel="stylesheet" href="../css/layout.css" />
    <title>MANGUCA</title>
   </head>
@@ -57,6 +56,12 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="concursos.html">Concursos</a></li>
+      </ul>
     </div>
     </header>
     <main>
