--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -10,6 +10,8 @@
    />
    <!-- CSS Main Layout-->
    <link rel="stylesheet" href="../css/layout.css" />
+   <!-- CSS Concursos-->
+   <link rel="stylesheet" href="../css/concursos.css" />
    <title>MANGUCA</title>
   </head>
   <body>
@@ -57,15 +59,22 @@
         </div>
       </div>
     </div>
-    <div class="breadcrumb">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="concursos.html">Concursos</a></li>
-      </ul>
-    </div>
     </header>
     <main>
-      <p>AAAAAAAAA</p>
+      <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="concursos.html">Concursos</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Concursos</span>
+        </div>
+        </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
