--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -10,6 +10,8 @@
     />
     <!-- CSS Main Layout-->
     <link rel="stylesheet" href="../css/layout.css" />
+    <!-- CSS Localizacion-->
+    <link rel="stylesheet" href="../css/localizacion.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -57,15 +59,22 @@
         </div>
       </div>
     </div>
-    <div class="breadcrumb">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="localizacion.html">Localización</a></li>
-      </ul>
-    </div>
     </header>
     <main>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.0696295591271!2d-6.2110758981924015!3d36.52875769009336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0dcddc00bacbcb%3A0x2c9500fa5e5dfdb6!2sComplejo%20Deportivo!5e1!3m2!1ses!2ses!4v1583777800908!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <div class="main">
+        <div class="breadcrumb">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="localizacion.html">Localización</a></li>
+          </ul>
+        </div>
+        <div class="titleBox">
+          <div id="title">
+            <span>Localización</span>
+        </div>
+      </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d708.0696295591271!2d-6.2110758981924015!3d36.52875769009336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0dcddc00bacbcb%3A0x2c9500fa5e5dfdb6!2sComplejo%20Deportivo!5e1!3m2!1ses!2ses!4v1583777800908!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
     </main>
     <footer>
       <div class="footer">
