--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -77,13 +77,13 @@
                 <! Columna 1 -->
            <div>
                 <div class="artist">
-                   <a href="./invitados/faki.html"> <img id="miniature" src="../images/artistas/artist1.jpg" /></a>
+                   <a href="./invitados/faky.html"> <img id="miniature" src="../images/artistas/artist1.jpg" /></a>
                     <div class = "text">
                       <div id="rol">
                         <p>Música</p>
                       </div>
                       <div id="titles">
-                      FAKI
+                      FAKY
                       </div>
                       <div id="description">
                           <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
