--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -66,19 +66,26 @@
           <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="faki.html">FAKI</a></li>
+            <li><a href="faky.html">FAKY</a></li>
           </ul>
         </div>
         <div class="titleBox">
           <div id="title">
-            <span>FAKI</span>
+            <span>FAKY</span>
+          </div>
         </div>
+        <div id="information">
+          <article>
+            <p>
+              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
+              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+            </p>
+            <p>
+              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+            </p>
+          </article>
         </div>
-        </div>
-      </div>
-      <article>
-        <p>FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.</p>
-      </article>
+    </div>
     </main>
     <footer>
       <div class="footer">
