--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -77,7 +77,7 @@
     <div class="buttonContainer">
       <button onclick="showPanel(0,'#A28D48')" style=" color: white;">Viernes</button>
       <button onclick="showPanel(1,'#A28D48')">Sábado</button>
-      <button onclick="showPanel(2,'#A28D48')" style="">Domingo</button>
+      <button onclick="showPanel(2,'#A28D48')" >Domingo</button>
   
   </div>
 
@@ -184,7 +184,7 @@
     </div></div>
     <!-- FIN DIA 1-->
 
-  <!-- DIA 1-->
+  <!-- DIA 2-->
   <div class="tabPanel">  
     <div class="table-body">
 
@@ -194,7 +194,8 @@
         <tbody>
           <tr>
             <th>10:00</th>
-            <td rowspan="5" class="type-2">Charla WowChakra <span>2 type</span></td>
+            <td rowspan="3" class="type-2">Firmas Laia López <span>2 type</span></td>
+            <td rowspan="3" class="type-2">Firmas H Alexander <span>2 type</span></td>
             <td rowspan="5" class="type-3">Inscripciones Competición <span>3 type</span></td>
             </tr>
         <tr>
@@ -202,11 +203,12 @@
         </tr>
         <tr>
           <th>11:00</th>
-          <td rowspan="5" class="type-4">Taller de dibujo con Laia López<span>2 type</span></td>
-          <td rowspan="5" class="type-4">Seminario con youtuber Kompae<span>2 type</span></td>
+        
         </tr>
         <tr>
          <th>11:30</th>
+         <td rowspan="4" class="type-4">Taller de fotografía para Cosplay<span>2 type</span></td>
+         <td rowspan="3" class="type-4">Seminario: Ser autónomo con Ginny Di<span>2 type</span></td>
         </tr>
         <tr>
           <th>12:00</th>
@@ -219,14 +221,17 @@
         </tr>
         <tr>
           <th>13:00</th>
+          <td rowspan="2" class="type-2">Charla Voces de Overwatch<span>1 type</span></td>
+
         </tr>
         <tr>
         <th>13:30</th>
         <td rowspan="3" class="type-3">Competición DDR<span>3 type</span></td>
-        <td rowspan="3" class="type-2">Charla Voces de Overwatch<span>1 type</span></td>
         </tr>
         <tr>
           <th>14:00</th>
+          <td rowspan="2" class="type-2">Nate Gentile: Básicos de overclocking<span>1 type</span></td>
+
         </tr>
         <tr>
         <th>14:30</th>
@@ -269,7 +274,7 @@
         </tr>
         <tr>
         <th>20:00</th>
-        <td rowspan="2" colspan="4" class="type-5">Concierto FAKY<span>5 type</span></td>
+        <td rowspan="2" colspan="4" class="type-5">Concierto Kiki vivi lily<span>5 type</span></td>
   
         </tr>
         <tr>
@@ -277,7 +282,7 @@
         </tr>
         <tr>
         <th>21:00</th>
-        <td rowspan="2" colspan="4" class="type-5">Concierto SUKISHA<span>5 type</span></td>
+        <td rowspan="2" colspan="4" class="type-5">Concierto Lady Beard<span>5 type</span></td>
         </tr>
         <tr>
           <th>21:30</th>
@@ -298,16 +303,16 @@
         <tbody>
           <tr>
             <th>10:00</th>
-            <td rowspan="5" class="type-2">Charla WowChakra <span>2 type</span></td>
+            <td rowspan="10" class="type-5">Exposición coches frikis<span>5 type</span></td>
             <td rowspan="5" class="type-3">Inscripciones Competición <span>3 type</span></td>
+            <td rowspan="10" class="type-5">Degustación comidas japonesas<span>5 type</span></td>
+
             </tr>
         <tr>
           <th>10:30</th>
         </tr>
         <tr>
           <th>11:00</th>
-          <td rowspan="5" class="type-4">Taller de dibujo con Laia López<span>2 type</span></td>
-          <td rowspan="5" class="type-4">Seminario con youtuber Kompae<span>2 type</span></td>
         </tr>
         <tr>
          <th>11:30</th>
@@ -318,16 +323,14 @@
         <tr>
           <th>12:30</th>
           <td rowspan="5" class="type-4">Bodas otakus <span>2 type</span></td>
-          <td rowspan="5" class="type-5">Bailes Kpopers <span>4 type</span></td>
-  
+          <td rowspan="5" class="type-3">Pasarela Cosplay <span>4 type</span></td>
+
         </tr>
         <tr>
           <th>13:00</th>
         </tr>
         <tr>
         <th>13:30</th>
-        <td rowspan="3" class="type-3">Competición DDR<span>3 type</span></td>
-        <td rowspan="3" class="type-2">Charla Voces de Overwatch<span>1 type</span></td>
         </tr>
         <tr>
           <th>14:00</th>
@@ -373,16 +376,16 @@
         </tr>
         <tr>
         <th>20:00</th>
-        <td rowspan="2" colspan="4" class="type-5">Concierto FAKY<span>5 type</span></td>
-  
+        <td rowspan="3" colspan="2" class="type-3">Competición DDR<span>3 type</span></td>
+        <td rowspan="5" colspan="2" class="type-5">Bailes Kpopers <span>4 type</span></td>
+
         </tr>
         <tr>
         <th>20:30</th>
         </tr>
         <tr>
         <th>21:00</th>
-        <td rowspan="2" colspan="4" class="type-5">Concierto SUKISHA<span>5 type</span></td>
-        </tr>
+      </tr>
         <tr>
           <th>21:30</th>
           </tr>
