--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -75,9 +75,9 @@
 <div class="tabContainer">
 
     <div class="buttonContainer">
-      <button onclick="showPanel(0,'#A28D48')" style=" color: white;">Viernes</button>
-      <button onclick="showPanel(1,'#A28D48')">Sábado</button>
-      <button onclick="showPanel(2,'#A28D48')" >Domingo</button>
+      <button onclick="showPanel(0,'#58B1A6')" id="button1">Viernes</button>
+      <button onclick="showPanel(1,'#0D8D7A')" >Sábado</button>
+      <button onclick="showPanel(2,'#D8AC34')" id="button3" >Domingo</button>
   
   </div>
 
