--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -58,6 +58,7 @@
         </div>
       </div>
     </div>
+    <div class="main">
     <div class="breadcrumb">
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -116,7 +117,7 @@
             </div>
           </div>
        
-         
+        </div>
       </div>
   </main>
     <footer>
