--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -9,9 +9,8 @@
      rel="stylesheet"
    />
    <!-- CSS Main Layout-->
+   <link rel="stylesheet" href="../css/actividades.css" />
    <link rel="stylesheet" href="../css/layout.css" />
-   <!-- CSS Concursos-->
-   <link rel="stylesheet" href="../css/concursos.css" />
    <title>MANGUCA</title>
   </head>
   <body>
@@ -59,23 +58,68 @@
         </div>
       </div>
     </div>
+    <div class="main">
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="concursos.html">Concursos</a></li>
+      </ul>
+    </div>
     </header>
     <main>
       <div class="main">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="concursos.html">Concursos</a></li>
-          </ul>
-        </div>
         <div class="titleBox">
           <div id="title">
-            <span>Concursos</span>
+          <span>Concursos</span>
+          </div>
         </div>
-        </div>
+        <div class="activity">
+          <img id="miniature" src="../images/actividades/activity1.png" />
+          <div class = "text">
+            <div id="rol">
+              <p>Música</p>
+            </div>
+            <div id="titles">
+            FAKI
+            </div>
+            <div id="description">
+                <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
+            </div>
+          </div>
+          </div>
+
+          <div class="activity" id="invert">
+            <img id="miniatureInvert" src="../images/actividades/activity2.jpg" />
+            <div class = "text" id="textInvert">
+              <div id="rol">
+                <p>Música</p>
+              </div>
+              <div id="titles">
+              FAKI
+              </div>
+              <div id="description">
+                  <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
+              </div>
+            </div>
+         </div>
+          <div class="activity">
+            <img id="miniature" src="../images/actividades/activity3.png" />
+            <div class = "text">
+              <div id="rol">
+                <p>Música</p>
+              </div>
+              <div id="titles">
+              FAKI
+              </div>
+              <div id="description">
+                  <p>El grupo de pop que más lo está petando en Japón, con doble concierto por primera vez en Europa.</p>
+              </div>
+            </div>
+          </div>
+       
         </div>
       </div>
-    </main>
+  </main>
     <footer>
       <div class="footer">
         <p>Manguca &#169; todos los derechos reservados</p>
